--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Suhardi-14</title>
+	<title></title>
 </head>
-	<h1>Hello world!</h1>
-	<p>I'm posted with GitHub Pages.</p>
-
+<body>
+<h1>Hello world!</h1>
+<p>I'm posted with GitHub Pages.</p>
 </body>
 </html>
