--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Suhardi-14</title>
 </head>
-<body>
-<h1>Hello world!</h1>
-<p>I'm posted with GitHub Pages.</p>
+	<h1>Hello world!</h1>
+	<p>I'm posted with GitHub Pages.</p>
+
 </body>
 </html>
