--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-</head>
-<body>
-<h1>Hello world!</h1>
-<p>I'm posted with GitHub Pages.</p>
-</body>
+	<head>
+		<title></title>
+	</head>
+	<body>
+		My first webpage
+	</body>
 </html>
