--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<img src="login1.png">
+	<img src="login1.png" width="100" height="100" align="right">
 	<h1>Hello world!</h1>
 	<p>I'm posted with GitHub Pages.</p>
 	<br>
