--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <body>
 	<img src="login1.png" width="100" height="100" align="right">
+	<img src="https://upload.wikimedia.org/wikipedia/en/thumb/2/29/Vanderbilt_University_seal.svg/300px-Vanderbilt_University_seal.svg.png" width="100" height="100" align="left">
 	<h1>Hello world!</h1>
 	<p>I'm posted with GitHub Pages.</p>
 	<br>
