--- a/index.html
+++ b/index.html
@@ -20,5 +20,20 @@
 		<li><sub>Sufiamie</sub></li>
 		<li><u>Suhardi</u></li>
 	</ul>
+
+	<form>
+		<p>Username: <input type="text" placeholder="Your Username"></p>
+		<p>Stay logged in: <input type="checkbox" checked></p>
+		<p>Under 18: <input type="radio" name="age" value="u18"></p>
+		<p>Over 18: <input type="radio" name="age" value="o18"></p>
+		<p>Favourite food:
+			<select>
+				<option>Pizza</option>
+				<option selected>Ice Cream</option>
+				<option>Sandwiches</option>
+			</select>
+		</p>
+		<p><input type="submit" value="Click me!"></p>
+	</form>
 </body>
 </html>
