--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<li><sub>Sufiamie</sub></li>
 		<li><u>Suhardi</u></li>
 	</ul>
-
+	<hr>
 	<form>
 		<p>Username: <input type="text" placeholder="Your Username"></p>
 		<p>Stay logged in: <input type="checkbox" checked></p>
@@ -35,5 +35,43 @@
 		</p>
 		<p><input type="submit" value="Click me!"></p>
 	</form>
+	<hr>
+	<table>
+
+		<thead>
+			<tr>
+				<th>Name</th>
+				<th>Favourite Color</th>
+			</tr>	
+		</thead>
+
+		<tbody>
+			<tr>
+				<td>Suhairul</td>
+				<td>Green</td>
+			</tr>
+
+			<tr>
+				<td>Hazirun</td>
+				<td>Black</td>
+			</tr>
+
+			<tr>
+				<td>Harnizan</td>
+				<td>Blue</td>
+			</tr>
+
+
+			<tr>
+				<td>Sufiamie</td>
+				<td>Purple</td>
+			</tr>
+
+			<tr>
+				<td>Suhardi</td>
+				<td>Red</td>
+			</tr>
+		</tbody>
+	</table>
 </body>
 </html>
