--- a/index.html
+++ b/index.html
@@ -73,5 +73,7 @@
 			</tr>
 		</tbody>
 	</table>
+	<hr>
+	<p><a href="http://wwww.google.com"><img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png"></a></p>
 </body>
 </html>
