--- a/index.html
+++ b/index.html
@@ -74,6 +74,6 @@
 		</tbody>
 	</table>
 	<hr>
-	<p><a href="http://wwww.google.com"><img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png"></a></p>
+	<p><a href="http://www.google.com"><img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png"></a></p>
 </body>
 </html>
