--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 	<img src="login1.png" width="100" height="100" align="right">
 	<img src="https://upload.wikimedia.org/wikipedia/en/thumb/2/29/Vanderbilt_University_seal.svg/300px-Vanderbilt_University_seal.svg.png" width="100" height="100" align="left">
-	<br>
-	<h1>Hello world!</h1>
+	<br><br><br>
+	<h1 id="top">Hello world!</h1>
 	<p>I'm posted with GitHub Pages.</p>
 	<br>
 	<hr>
@@ -21,7 +21,7 @@
 		<li><u>Suhardi</u></li>
 	</ul>
 	<hr>
-	<form>
+	<form id="login">
 		<p>Username: <input type="text" placeholder="Your Username"></p>
 		<p>Stay logged in: <input type="checkbox" checked></p>
 		<p>Under 18: <input type="radio" name="age" value="u18"></p>
@@ -76,5 +76,8 @@
 	<hr>
 	<p><a href="http://www.google.com"><img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png"></a></p>
 	<p><a href="helloworld.html">Hello World!</a></p>
+	<p><a href="#top">Back to top</a></p>
+	<p><a href="#login">Back to login</a></p>
+
 </body>
 </html>
