--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	<hr>
 		&lt;a href="http://www.google.com"&gt;&lt;/a&gt;
 	<hr>
-	<iframe src="http://www.wikipedia.com"></iframe>
+	<iframe src="http://www.ecowebhosting.co.uk"></iframe>
 	<hr>
 	<p><a href="#top">Back to top</a></p>
 	<p><a href="#login">Back to login</a></p>
