--- a/GECertificate.html
+++ b/GECertificate.html
@@ -4,7 +4,7 @@
 	<title>BEM Graduate Engineer</title>
 </head>
 <body>
-	<img src="https://github.com/Suhardi-14/Suhardi-14.github.io/GECertificate.png">
+	<img src="https://github.com/Suhardi-14/Suhardi-14.github.io/GECertificate.PNG.png">
 
 </body>
 </html>
