--- a/GECertificate.html
+++ b/GECertificate.html
@@ -4,7 +4,7 @@
 	<title>BEM Graduate Engineer</title>
 </head>
 <body>
-	<img src="GE.png">
+	<img src="GE.png", height="1000" width="1000">
 
 </body>
 </html>
