--- a/GECertificate.html
+++ b/GECertificate.html
@@ -4,7 +4,6 @@
 	<title>BEM Graduate Engineer</title>
 </head>
 <body>
-	<img src="login1.png", height="1000" width="1000">
-
+	<img src="login1.png" width="100" height="100" align="right">
 </body>
 </html>
