--- a/GECertificate.html
+++ b/GECertificate.html
@@ -4,7 +4,7 @@
 	<title>BEM Graduate Engineer</title>
 </head>
 <body>
-	
-	<img src="login1.png" width="100" height="100" align="right">
+
+	<img src="GE.png" width="1000" height="1000" align="left">
 </body>
 </html>
