--- a/GECertificate.html
+++ b/GECertificate.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 
-	<img src="GE.png" width="1000" height="1000" align="left">
+	<img src="GEC.jpg" width="1000" height="1000" align="left">
 </body>
 </html>
