--- a/GECertificate.html
+++ b/GECertificate.html
@@ -4,7 +4,7 @@
 	<title>BEM Graduate Engineer</title>
 </head>
 <body>
-
+	<h1>Graduate Engineer</h1>
 	<img src="GEC.jpg" width="1000" height="1000" align="left">
 </body>
 </html>
