--- a/webpage-with-style.html
+++ b/webpage-with-style.html
@@ -2,10 +2,22 @@
 <html>
 <head>
 	<title>Webpage With Style</title>
+	<style type="text/css">
+		p {
+			color: red;
+			font-size: 200%;
+
+		}
+
+		h1 {
+			color: pink;
+		}
+	</style>
 </head>
 <body>
-	<p style="color: blue; font-size: 200%">The quick brown fox jumped of the lazy dog</p>
-	<h1 style="color: green; font-size: 50%">CSS is cool</h1>
+	<p>The quick brown fox jumped of the lazy dog</p>
+	<p>Wow! I love internal CSS</p>
+	<h1>CSS is cool</h1>
 
 </body>
 </html>
