--- a/webpage-with-style.html
+++ b/webpage-with-style.html
@@ -3,21 +3,29 @@
 <head>
 	<title>Webpage With Style</title>
 	<style type="text/css">
-		p {
+		.red {
 			color: red;
-			font-size: 200%;
 
 		}
 
-		h1 {
-			color: pink;
+		.large {
+			font-size: 200%;
+		}
+
+		#green {
+			color: green;
+		}
+
+		.underlined {
+			text-decoration: underline;
 		}
 	</style>
 </head>
 <body>
-	<p>The quick brown fox jumped of the lazy dog</p>
-	<p>Wow! I love internal CSS</p>
-	<h1>CSS is cool</h1>
+	<p class="red large">The quick brown fox jumped of the lazy dog</p>
+	<p class="large">Wow! I love internal CSS</p>
+	<p id="green">This is some more text. <span class="underlined">And this text is underlined</span></p>
+	<h1 class="red">CSS is cool</h1>
 
 </body>
 </html>
