--- a/webpage-with-style.html
+++ b/webpage-with-style.html
@@ -19,13 +19,28 @@
 		.underlined {
 			text-decoration: underline;
 		}
+
+		#first-section {
+			color: blue;
+			background-color: pink;
+			width: 50%;
+
+		}
+		#second-section {
+			background-color: yellow;
+		}
 	</style>
 </head>
 <body>
-	<p class="red large">The quick brown fox jumped of the lazy dog</p>
-	<p class="large">Wow! I love internal CSS</p>
-	<p id="green">This is some more text. <span class="underlined">And this text is underlined</span></p>
-	<h1 class="red">CSS is cool</h1>
+	<div id="first-section">
+		<p>The quick brown fox jumped of the lazy dog</p>
+		<p>Wow! I love internal CSS</p>
+	</div>
+	
+	<div id="second-section">
+		<p>This is some more text. <span class="underlined">And this text is underlined</span></p>
+		<h1>CSS is cool</h1>
+	</div>
 
 </body>
 </html>
