--- a/webpage-with-style.html
+++ b/webpage-with-style.html
@@ -27,6 +27,7 @@
 			position: relative;
 			left: 100px;
 			top: 100px;
+			z-index: 1;
  
 
 		}
@@ -34,8 +35,7 @@
 			background-color: yellow;
 			width: 200px; 
 			position: relative;
-			left: 100px;
-			top: -100px;
+			z-index: 2;
 		}
 
 	</style>
