--- a/webpage-with-style.html
+++ b/webpage-with-style.html
@@ -24,19 +24,13 @@
 			color: blue;
 			background-color: pink;
 			width: 200px;
-			position: relative;
-			left: 100px;
-			top: 100px;
-			z-index: 1;
+			position: absolute;
  
 
 		}
 		#second-section {
 			background-color: yellow;
 			width: 200px; 
-			position: relative;
-			z-index: 2;
-			opacity: 0.9;
 		}
 
 	</style>
