--- a/webpage-with-style.html
+++ b/webpage-with-style.html
@@ -3,18 +3,6 @@
 <head>
 	<title>Webpage With Style</title>
 	<style type="text/css">
-		.red {
-			color: red;
-
-		}
-
-		.large {
-			font-size: 200%;
-		}
-
-		#green {
-			color: green;
-		}
 
 		.underlined {
 			text-decoration: underline;
@@ -24,13 +12,14 @@
 			color: blue;
 			background-color: pink;
 			width: 200px;
-			position: absolute;
+			margin: 100px;
  
 
 		}
 		#second-section {
 			background-color: yellow;
 			width: 200px; 
+			float: left;
 		}
 
 	</style>
