--- a/webpage-with-style.html
+++ b/webpage-with-style.html
@@ -12,7 +12,7 @@
 			color: blue;
 			background-color: pink;
 			width: 200px;
-			margin: 100px;
+			margin: 100px 50px;
  
 
 		}
@@ -20,6 +20,14 @@
 			background-color: yellow;
 			width: 200px; 
 			float: left;
+		}
+
+		#green {
+			color: green;
+		}
+
+		.red {
+			color: red;
 		}
 
 	</style>
@@ -31,8 +39,8 @@
 	</div>
 	
 	<div id="second-section">
-		<p>This is some more text. <span class="underlined">And this text is underlined</span></p>
-		<h1>CSS is cool</h1>
+		<p id="green">This is some more text. <span class="underlined">And this text is underlined</span></p>
+		<h1 class="red">CSS is cool</h1>
 	</div>
 
 	<p>This paragraph is not floated!</p>
