--- a/webpage-with-style.html
+++ b/webpage-with-style.html
@@ -9,8 +9,8 @@
 		}
 
 		#first-section {
-			color: blue;
-			background-color: pink;
+			color: #4285F4;
+			background-color: #CEF6CE;
 			width: 200px;
 			margin: 100px 50px;
  
